# models.py
@@ -1,0 +1,98 @@
+import os
+from sqlalchemy import Column, String, Integer
+from flask_sqlalchemy import SQLAlchemy
+
+db = SQLAlchemy()
+
+DB_PATH = os.getenv('DB_PATH', 'postgresql://postgres@127.0.0.1:5432/castaway')
+
+
+def setup_db(app, database_path=DB_PATH):
+    app.config["SQLALCHEMY_DATABASE_URI"] = database_path
+    app.config["SQLALCHEMY_TRACK_MODIFICATIONS"] = False
+    db.app = app
+    db.init_app(app)
+    db.create_all()
+
+
+movie_casts = db.Table('movie_casts',
+                       db.Column('movie_id', db.Integer,
+                                 db.ForeignKey('movies.id'),
+                                 primary_key=True),
+                       db.Column('actor_id', db.Integer,
+                                 db.ForeignKey('actors.id'),
+                                 primary_key=True)
+                       )
+
+
+class Actor(db.Model):
+    __tablename__ = 'actors'
+
+    id = Column(Integer, primary_key=True)
+    name = Column(String)
+    age = Column(Integer)
+    gender = Column(String)
+
+    def __init__(self, name, age, gender):
+        self.name = name
+        self.age = age
+        self.gender = gender
+
+    def insert(self):
+        db.session.add(self)
+        db.session.commit()
+
+    def update(self):
+        db.session.commit()
+
+    def delete(self):
+        db.session.delete(self)
+        db.session.commit()
+
+    def format(self):
+        return {
+            'id': self.id,
+            'name': self.name,
+            'age': self.age,
+            'gender': self.gender,
+            'movies': [movie.title for movie in self.movies]
+            }
+
+    def __repr__(self):
+        return f'<Actor {self.name} (id: {self.id})>'
+
+
+class Movie(db.Model):
+    __tablename__ = 'movies'
+
+    id = Column(Integer, primary_key=True)
+    title = Column(String)
+    releaseDate = Column(String)
+    actors = db.relationship('Actor', secondary=movie_casts,
+                             backref=db.backref('movies', lazy=True))
+
+    def __init__(self, title, releaseDate):
+        self.title = title
+        self.releaseDate = releaseDate
+
+    def insert(self):
+        db.session.add(self)
+        db.session.commit()
+
+    def update(self):
+        db.session.commit()
+
+    def delete(self):
+        db.session.delete(self)
+        db.session.commit()
+
+    def format(self):
+        return {
+            'id': self.id,
+            'title': self.title,
+            'releaseDate': self.releaseDate,
+            'actors': [actor.name for actor in self.actors]
+            }
+
+    def __repr__(self):
+        return f'<Movie {self.title} (id: {self.id})>'
